# remote-desktop-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
client/: Cargo.toml
client/src/: app.rs  main.rs
client/src/display/: decoder.rs  mod.rs  renderer.rs
client/src/input/: command.rs  events.rs  mapping.rs  mod.rs
client/src/network/: mod.rs  protocol.rs  tcp_client.rs  webrtc_client.rs  websocket_client.rs
client/src/ui/: controls.rs  mod.rs  settings.rs  styles.rs  window.rs
common/: Cargo.toml
common/src/: compression.rs  config.rs  encryption.rs  error.rs  lib.rs  protocol.rs
common/src/utils/: logging.rs  mod.rs  time.rs
server/: Cargo.toml
server/src/: app.rs  config.rs  lib.rs  main.rs
server/src/capture/: diff.rs  encoder.rs  mod.rs  monitor.rs  screenshot.rs
server/src/input/: keyboard.rs  mod.rs  mouse.rs  system.rs
server/src/network/: authentication.rs  mod.rs  protocol.rs  session.rs  tcp_server.rs  webrtc_server.rs  websocket_server.rs
server/src/ui/: mod.rs  settings.rs  tray.rs
web-client/: Cargo.toml  Cargo.toml.standalone  index.html  package.json  webpack.config.js
web-client/js/: index.js
web-client/src/: app.rs  lib.rs  state.rs
web-client/src/components/: connection.rs  controls.rs  display.rs  mod.rs  settings.rs  status.rs
web-client/src/utils/: clipboard.rs  format.rs  logging.rs  mod.rs  network.rs  storage.rs
web-client/static/: styles.css
